@@ -1,7 +1,6 @@
 package com.donnnno.arcticons.helper;
 
 import com.android.ide.common.vectordrawable.Svg2Vector;
-
 import org.dom4j.Document;
 import org.dom4j.DocumentHelper;
 import org.dom4j.Element;
@@ -9,166 +8,145 @@ import org.dom4j.Element;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileAlreadyExistsException;
-import java.nio.file.FileVisitOption;
-import java.nio.file.FileVisitResult;
-import java.nio.file.FileVisitor;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.attribute.BasicFileAttributes;
-import java.util.EnumSet;
-import java.util.Objects;
+import java.nio.file.*;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
 public class SvgConverter {
     private static Path sourceSvgPath;
     private static Path destinationVectorPath;
     private static String flavor;
-    private static final FileVisitor<Path> fileVisitor = new SimpleFileVisitor<>() {
-        @Override
-        public FileVisitResult postVisitDirectory(Path dir, IOException exc) {
-            return FileVisitResult.CONTINUE;
-        }
 
-        @Override
-        public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
-            // Skip folder which is processing svgs to xml
-            if (dir.equals(destinationVectorPath)) {
-                return FileVisitResult.SKIP_SUBTREE;
-            }
-            Path newDirectory = destinationVectorPath.resolve(sourceSvgPath.relativize(dir));
-            try {
-                Files.createDirectories(newDirectory);
-            } catch (FileAlreadyExistsException e) {
-                System.out.println("Directory already exists");
-            } catch (IOException e) {
-                System.out.println("Error creating directory");
-                return FileVisitResult.SKIP_SUBTREE;
-            }
-            return FileVisitResult.CONTINUE;
-        }
-
-        @Override
-        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
-            convertToVector(file, destinationVectorPath.resolve(sourceSvgPath.relativize(file)));
-            return FileVisitResult.CONTINUE;
-        }
-
-        @Override
-        public FileVisitResult visitFileFailed(Path file, IOException exc) {
-            System.out.println("File visit failed");
-            return FileVisitResult.CONTINUE;
-        }
-    };
-
-    public static void process(String sourceDirectory, String destDirectory, String getFlavor) {
-        sourceSvgPath = Paths.get(sourceDirectory);
-        destinationVectorPath = Paths.get(destDirectory);
+    public static void process(String sourceDir, String destDir, String getFlavor) {
+        sourceSvgPath = Path.of(sourceDir);
+        destinationVectorPath = Path.of(destDir);
         flavor = getFlavor;
+
         try {
-            EnumSet<FileVisitOption> options = EnumSet.of(FileVisitOption.FOLLOW_LINKS);
-            // check first if source is a directory
-            if (Files.isDirectory(sourceSvgPath)) {
-                Files.walkFileTree(sourceSvgPath, options, Integer.MAX_VALUE, fileVisitor);
-            } else {
-                System.out.println("source not a directory");
+            // 1. Collect files first to get a total count for the progress bar
+            List<Path> svgFiles;
+            try (Stream<Path> stream = Files.walk(sourceSvgPath)) {
+                svgFiles = stream
+                        .filter(Files::isRegularFile)
+                        .filter(p -> p.getFileName().toString().endsWith(".svg"))
+                        .toList();
             }
+
+            int totalFiles = svgFiles.size();
+            if (totalFiles == 0) {
+                System.out.println("No SVG files found.");
+                return;
+            }
+
+            System.out.printf("Starting conversion of %d files using %d cores...%n",
+                    totalFiles, Runtime.getRuntime().availableProcessors());
+
+            AtomicInteger processedCount = new AtomicInteger(0);
+
+            // 2. Parallel Processing
+            svgFiles.parallelStream().forEach(svgFile -> {
+                Path relative = sourceSvgPath.relativize(svgFile);
+                Path targetFile = destinationVectorPath.resolve(relative);
+
+                try {
+                    Files.createDirectories(targetFile.getParent());
+                    convertToVector(svgFile, targetFile);
+
+                    // 3. Update progress
+                    int current = processedCount.incrementAndGet();
+                    printProgressBar(current, totalFiles);
+
+                } catch (IOException e) {
+                    System.err.println("\nFailed to create directory: " + targetFile.getParent());
+                }
+            });
+
+            System.out.println("\nAll icons processed successfully.");
+
         } catch (IOException e) {
-            System.out.println("Error processing files" + e.getMessage());
+            System.err.println("Fatal I/O Error: " + e.getMessage());
         }
+    }
+
+    private static void printProgressBar(int current, int total) {
+        int percent = (int) ((double) current / total * 100);
+        String bar = "#".repeat(percent / 2) + "-".repeat(50 - (percent / 2));
+        System.out.print("\r[" + bar + "] " + percent + "% (" + current + "/" + total + ")");
     }
 
     private static void convertToVector(Path svgSource, Path vectorTargetPath) {
-        // convert only if it is .svg
-        if (svgSource.getFileName().toString().endsWith(".svg")) {
-            Path targetFile = Path.of(XMLhelper.getFileWithExtension(vectorTargetPath));
-            try (ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream()) {
-                Svg2Vector.parseSvgToXml(svgSource, byteArrayOutputStream);
-                if (Objects.equals(flavor, "you")){
-                createAdaptive(byteArrayOutputStream, String.valueOf(targetFile));
-                } else if (Objects.equals(flavor, "black")){
-                    createDrawable(byteArrayOutputStream, String.valueOf(targetFile),"#000000");
-                }else if (Objects.equals(flavor, "normal")){
-                    createDrawable(byteArrayOutputStream, String.valueOf(targetFile),"#ffffff");
-                }else if (Objects.equals(flavor, "dayNight")) {
-                    createDrawable(byteArrayOutputStream, String.valueOf(targetFile), "@color/icon_color");
-                }
-            } catch (Exception e) {
-                System.out.println("Error converting file " + svgSource.getFileName());
+        Path targetFile = Path.of(XMLhelper.getFileWithExtension(vectorTargetPath));
+
+        try (var os = new ByteArrayOutputStream()) {
+            synchronized (Svg2Vector.class) {
+                Svg2Vector.parseSvgToXml(svgSource, os);
             }
-        } else {
-            System.out.println("Skipping file as it's not an svg " + svgSource.getFileName());
+
+            switch (flavor) {
+                case "you"      -> createAdaptive(os, targetFile.toString());
+                case "black"    -> createDrawable(os, targetFile.toString(), "#000000");
+                case "normal"   -> createDrawable(os, targetFile.toString(), "#ffffff");
+                case "dayNight" -> createDrawable(os, targetFile.toString(), "@color/icon_color");
+                default         -> throw new IllegalArgumentException("Unknown flavor: " + flavor);
+            }
+        } catch (Exception e) {
+            System.err.println("\n Error in " + svgSource.getFileName() + ": " + e.getMessage());
         }
     }
-    private static void createDrawable(ByteArrayOutputStream byteArrayOutputStream, String resPath, String color) throws Exception {
-        String px = "1";
-        String XmlContent = byteArrayOutputStream.toString(StandardCharsets.UTF_8);
-        Document document = DocumentHelper.parseText(XmlContent);
-        updateXmlPath(document, "android:strokeColor", color);
-        updateXmlPath(document, "android:fillColor", color);
-        updateXmlPath(document, "android:strokeWidth", px);
-        updateRootElement(document, "android:tint", color);
-        XMLhelper.writeDocumentToFile(document, resPath);
+
+    private static void createDrawable(ByteArrayOutputStream os, String resPath, String color) throws Exception {
+        Document doc = DocumentHelper.parseText(os.toString(StandardCharsets.UTF_8));
+
+        applyIconStyles(doc, color, "1"); // Centralized styling logic
+        XMLhelper.writeDocumentToFile(doc, resPath);
     }
 
-    private static void createAdaptive(ByteArrayOutputStream byteArrayOutputStream, String resPath) throws Exception {
+    private static void createAdaptive(ByteArrayOutputStream os, String resPath) throws Exception {
         String fg = "@color/icon_color";
         String bg = "@color/icon_background_color";
-        String px = "1.2";
-        String foregroundXmlContent = byteArrayOutputStream.toString(StandardCharsets.UTF_8);
-        Document foregroundDocument = DocumentHelper.parseText(foregroundXmlContent);
-        Element rootElement = foregroundDocument.getRootElement();
 
-        Document document = DocumentHelper.createDocument();
-        Element root = document.addElement("adaptive-icon")
+        Element svgRoot = DocumentHelper.parseText(os.toString(StandardCharsets.UTF_8)).getRootElement();
+
+        Document adaptiveDoc = DocumentHelper.createDocument();
+        Element root = adaptiveDoc.addElement("adaptive-icon")
                 .addAttribute("xmlns:android", "http://schemas.android.com/apk/res/android");
-        root.addElement("background")
-                .addAttribute("android:drawable", bg);
+
+        root.addElement("background").addAttribute("android:drawable", bg);
         root.addElement("foreground").addElement("inset")
                 .addAttribute("android:inset", "25%")
-                .add(rootElement);
-        updateXmlPath(document, "android:strokeColor", fg);
-        updateXmlPath(document, "android:fillColor", fg);
-        updateXmlPath(document, "android:strokeWidth", px);
-        updateRootElement(document, "android:tint", fg);
-        XMLhelper.writeDocumentToFile(document, resPath);
+                .add(svgRoot.createCopy()); // createCopy() ensures DOM integrity
+
+        applyIconStyles(adaptiveDoc, fg, "1.2");
+        XMLhelper.writeDocumentToFile(adaptiveDoc, resPath);
     }
 
-
-    private static void updateRootElement(Document aDocument, String key, String value) {
-
-        String keyWithoutNameSpace = key.substring(key.indexOf(":") + 1);
-        org.dom4j.Attribute attr = aDocument.getRootElement().attribute(keyWithoutNameSpace);
-        if (attr != null) {
-            if (!attr.getValue().equals("#00000000")) {
-                attr.setValue(value);
-            }
-        } else {
-            aDocument.getRootElement().addAttribute(key, value);
-        }
+    private static void applyIconStyles(Document doc, String color, String strokeWidth) {
+        updateAttributes(doc.getRootElement(), color, strokeWidth);
+        updateAttributeIfPresent(doc.getRootElement(), "android:tint", color);
     }
 
-    private static void updateXmlPath(Document xmlDocument, String searchKey, String attributeValue) {
-        updateXmlPath(xmlDocument.getRootElement(), searchKey, attributeValue);
-    }
-
-    private static void updateXmlPath(Element parentElement, String searchKey, String attributeValue) {
-        String keyWithoutNameSpace = searchKey.substring(searchKey.indexOf(":") + 1);
-
-        for (Object e : parentElement.elements()) {
-            if (e instanceof Element element) {
-                if ("path".equals(element.getName())) {
-                    org.dom4j.Attribute attr = element.attribute(keyWithoutNameSpace);
-                    if (attr != null && !attr.getValue().equals("#00000000")) {
-                        attr.setValue(attributeValue);
-                    }
+    private static void updateAttributes(Element parent, String color, String strokeWidth) {
+        for (Object obj : parent.elements()) {
+            if (obj instanceof Element el) {
+                if ("path".equals(el.getName())) {
+                    updateAttributeIfPresent(el, "android:strokeColor", color);
+                    updateAttributeIfPresent(el, "android:fillColor", color);
+                    updateAttributeIfPresent(el, "android:strokeWidth", strokeWidth);
                 }
-
-                // Recursively process child elements
-                updateXmlPath(element, searchKey, attributeValue);
+                updateAttributes(el, color, strokeWidth);
             }
         }
     }
 
+    private static void updateAttributeIfPresent(Element el, String name, String value) {
+        String localName = name.contains(":") ? name.split(":")[1] : name;
+        var attr = el.attribute(localName);
+        // Don't overwrite transparent/null colors
+        if (attr == null) {
+            el.addAttribute(name, value);
+        } else if (!attr.getValue().equals("#00000000")) {
+            attr.setValue(value);
+        }
+    }
 }
